new over time db changes and department changes
